sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:11: error: not found: value swapp
        swapp(i, i+1);
        ^AlgCocktailSort1:20: error: not found: value swapp
        swapp(i, i+1);
        ^